--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-toast",
-  "version": "0.1.0",
+  "version": "0.1.0-beta",
   "description": "simple toast, write by svelte",
   "main": "svelte-toast.js",
   "repository": "git@github.com:lili21/svelte-toast.git",
@@ -15,7 +15,7 @@
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-svelte": "^1.8.1"
   },
-  "script": {
+  "scripts": {
     "build": "rollup --config rollup.config.js",
     "prepublish": "npm run build"
   }
