--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-toast",
-  "version": "0.1.0-beta",
+  "version": "0.1.0",
   "description": "simple toast, write by svelte",
   "main": "svelte-toast.js",
   "repository": "git@github.com:lili21/svelte-toast.git",
