--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "svelte-toast": "^0.1.0-beta"
+    "svelte-toast": "^0.1.1"
   },
   "scripts": {
     "start": "webpack --progress --watch --config webpack.dev.js",
